--- a/Views/Events/Add.cshtml
+++ b/Views/Events/Add.cshtml
@@ -6,6 +6,7 @@
 <partial name="/Views/Shared/_LinkListPartial.cshtml" />
 <h1>Add Event</h1>
 <form method="post">
-    <input name="name" type="text" />
+    <label>Event Name: <input name="name" type="text" /></label><br />
+    <label>Description: <textarea name="desc"></textarea></label><br />
     <input type="submit" value="Add Event" />
 </form>
