--- a/Views/Events/Add.cshtml
+++ b/Views/Events/Add.cshtml
@@ -7,6 +7,6 @@
 <h1>Add Event</h1>
 <form method="post">
     <label>Event Name: <input name="name" type="text" /></label><br />
-    <label>Description: <textarea name="desc"></textarea></label><br />
+    <label>Description: <textarea name="description"></textarea></label><br />
     <input type="submit" value="Add Event" />
 </form>
