Completed ch14 exercise

--- a/Views/Events/Index.cshtml
+++ b/Views/Events/Index.cshtml
@@ -34,6 +34,7 @@
             <td>@evt.Id</td>
             <td>@evt</td>
             <td>@evt.Description</td>
+            <td><a asp-controller="Events" asp-action="Edit" asp-route-id="@evt.Id">Edit Event</a></td>
         </tr>
     }
 </table>
